# NetworkCameras

./: .gitignore  CMakeLists.txt  NetworkCameras.sln
NetworkCameras/: App.cpp  App.h  Camera.cpp  Camera.h  Main.cpp  NetworkCameras.vcxproj  NetworkCameras.vcxproj.filters  TCPSender.cpp  TCPSender.h  UdpServer.cpp  UdpServer.h
